--- a/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
+++ b/src/app/components/dashboard/content/patient-visit/patient-visit.component.html
@@ -1,10 +1,10 @@
 <div class="main-container">
     <app-header></app-header>
     <div class="content">
-        <app-visit-header (selectPageEvent)="select($event)" [visit]="visit"></app-visit-header>
+        <app-visit-header [onlyGeneral]="visit.medicalFile == null" (selectPageEvent)="select($event)" [visit]="visit"></app-visit-header>
         <div class="pages" *ngIf="visit">
             <div class="page" *ngIf="page == 1">
-                <app-visit-information [visit]="visit"></app-visit-information>
+                <app-visit-information (visitSelectedEvent)="visitSelected($event)" [visit]="visit"></app-visit-information>
             </div>
             <div class="page" *ngIf="page == 3">
                 <app-visit-prescription [visit]="visit"></app-visit-prescription>
