Visit Appointment init

--- a/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
@@ -50,4 +50,10 @@
         </div>
         <span>Documents</span>
     </div>
+    <div class="option" *ngIf="!onlyGeneral">
+        <div class="center-v">
+            <i class="fa fa-calendar"></i>
+        </div>
+        <span>Rendez-vous</span>
+    </div>
 </div>
