--- a/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-header/visit-header.component.html
@@ -50,7 +50,7 @@
         </div>
         <span>Documents</span>
     </div>
-    <div class="option" *ngIf="!onlyGeneral">
+    <div class="option" *ngIf="!onlyGeneral" (click)="openVisitAppointment()">
         <div class="center-v">
             <i class="fa fa-calendar"></i>
         </div>
