--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -18,5 +18,6 @@
         <app-clincal-exam-manager *ngIf="windowPage == 'clincal-exam-manager'" (closeEvent)="close()"></app-clincal-exam-manager>
         <app-visit-advanced-search *ngIf="windowPage == 'visit-advanced-search'" (closeEvent)="close()"></app-visit-advanced-search>
         <app-medical-file-advanced-search *ngIf="windowPage == 'medical-file-advanced-search'" (closeEvent)="close()"></app-medical-file-advanced-search>
+        <app-visit-appointment *ngIf="windowPage ==  'visit-appointment'" (closeEvent)="close()"></app-visit-appointment>
     </div>
 </div>
