Expenses header design done

--- a/src/app/components/dashboard/content/expenses-manager/expenses-manager.component.html
+++ b/src/app/components/dashboard/content/expenses-manager/expenses-manager.component.html
@@ -1,1 +1,6 @@
-<p>expenses-manager works!</p>
+<div class="main-container">
+    <app-header></app-header>
+    <div class="body">
+        <app-expenses-header></app-expenses-header>
+    </div>
+</div>
