--- a/src/app/components/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/dashboard/side-bar/side-bar.component.html
@@ -34,6 +34,13 @@
                     <i class="fa fa-heartbeat"></i>
                 </a>
             </li>
+            <li [class.active]="activatedRouter == 7">
+                <a routerLink="/dashboard/expenses">
+                    <i class="fa fa-coins"></i>
+                </a>
+            </li>
+
+
             <li>
                 <a>
                     <i class="fa fa-user-injured"></i>
