--- a/src/app/components/dashboard/content/expenses-manager/expenses-header/expenses-header.component.html
+++ b/src/app/components/dashboard/content/expenses-manager/expenses-header/expenses-header.component.html
@@ -22,7 +22,7 @@
             <input type="date" class="primary-input">
         </div>
         <div class="button-container">
-            <button>Ajouter frais <i class="fa fa-coins"></i></button>
+            <button (click)="openAddExpense()">Ajouter frais <i class="fa fa-coins"></i></button>
         </div>
     </div>
 </div>
