--- a/src/app/components/dashboard/content/expenses-manager/expense/expense.component.html
+++ b/src/app/components/dashboard/content/expenses-manager/expense/expense.component.html
@@ -1,1 +1,8 @@
-<p>expense works!</p>
+<div class="main-container primary-radius">
+    <p>
+        {{expense.type}} <span class="price">{{expense.price}} DA</span>
+    </p>
+    <p>
+        date de creation : <span>{{creationDate}}</span>
+    </p>
+</div>
