--- a/src/app/components/dashboard/content/expenses-manager/add-expense/add-expense.component.html
+++ b/src/app/components/dashboard/content/expenses-manager/add-expense/add-expense.component.html
@@ -5,7 +5,7 @@
 
                 <div class="col col-md-6">
                     <div class="form-group">
-                        <input type="number" [ngClass]="{'is-invalid' : form.get('price').touched && form.get('price').invalid}" formControlName="price" placeholder="Montant (DA)" class="primary-input">
+                        <input type="number" [(ngModel)]="expense.price" [ngClass]="{'is-invalid' : form.get('price').touched && form.get('price').invalid}" formControlName="price" placeholder="Montant (DA)" class="primary-input">
                         <div class="invalid-feedback" *ngIf="form.get('price').touched && form.get('price').invalid">
                             <div *ngIf="form.get('price').errors.required">
                                 Montant est requis
@@ -18,9 +18,9 @@
                 </div>
                 <div class="col col-md-6">
                     <div class="form-group">
-                        <select formControlName="type" [ngClass]="{'is-invalid' : form.get('type').touched && form.get('type').invalid}">
-                            <option hidden>Selectioner</option>
-                            <option *ngFor="let type of types">{{type}}</option>
+                        <select formControlName="type" [(ngModel)]="expense.type" [ngClass]="{'is-invalid' : form.get('type').touched && form.get('type').invalid}">
+                            <option hidden [value]="undefined">Selectioner</option>
+                            <option *ngFor="let type of types" [value]="type">{{type}}</option>
                         </select>
                         <div class="invalid-feedback" *ngIf="form.get('type').touched && form.get('type').invalid">
                             <div *ngIf="form.get('type').errors.required">le type est requis</div>
@@ -31,7 +31,9 @@
 
                 </div>
                 <div class="col col-md-6">
-                    <button class="primary-button" [disabled]="!form.valid" (click)="submit()">Ajouter <i class="fa fa-plus"></i></button>
+                    <button *ngIf="!expense.id" class="primary-button" [disabled]="!form.valid" (click)="submit()">Ajouter <i class="fa fa-plus"></i></button>
+                    <button *ngIf="expense.id" class="primary-button" [disabled]="!form.valid" (click)="edit()">Modifier <i class="fa fa-edit"></i></button>
+
                 </div>
             </div>
         </form>
