--- a/src/app/components/dashboard/content/expenses-manager/expense/expense.component.css
+++ b/src/app/components/dashboard/content/expenses-manager/expense/expense.component.css
@@ -1,6 +1,8 @@
 .main-container {
     padding: 8px 16px;
     background: white;
+    position: relative;
+    overflow: hidden;
 }
 
 .main-container p {
@@ -24,4 +26,43 @@
     color: white;
     font-size: 10px;
     font-weight: bold;
+}
+
+.main-container:hover .white-background {
+    opacity: 1;
+}
+
+.white-background {
+    background: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    display: flex;
+    align-items: center;
+    opacity: 0;
+    transition-duration: 0.3s;
+}
+
+.white-background div {
+    width: 100%;
+    text-align: center;
+}
+
+.white-background span {
+    margin: 0px 4px;
+    cursor: pointer;
+}
+
+.white-background span:hover {
+    text-decoration: underline;
+}
+
+.white-background span:first-child {
+    color: rgb(38, 94, 215);
+}
+
+.white-background span:last-child {
+    color: rgb(254, 101, 85);
 }
