--- a/src/app/components/dashboard/content/expenses-manager/expenses-manager.component.html
+++ b/src/app/components/dashboard/content/expenses-manager/expenses-manager.component.html
@@ -4,7 +4,7 @@
         <app-expenses-header></app-expenses-header>
         <div class="row">
             <div class="col col-md-4" *ngFor="let expense of expenses">
-                <app-expense [expense]="expense"></app-expense>
+                <app-expense (deleteEvent)="delete($event)" (editEvent)="edit($event)" [expense]="expense"></app-expense>
             </div>
         </div>
     </div>
