General Analytics init

--- a/src/app/components/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/dashboard/side-bar/side-bar.component.html
@@ -24,8 +24,8 @@
                     <i class="fa fa-file-medical-alt"></i>
                 </a>
             </li>
-            <li>
-                <a>
+            <li [class.active]="activatedRouter == 8">
+                <a routerLink="/dashboard/analytics">
                     <i class="fa fa-chart-pie"></i>
                 </a>
             </li>
@@ -39,8 +39,6 @@
                     <i class="fa fa-coins"></i>
                 </a>
             </li>
-
-
             <li>
                 <a>
                     <i class="fa fa-user-injured"></i>
