--- a/src/app/components/dashboard/content/analytics/analytics.component.html
+++ b/src/app/components/dashboard/content/analytics/analytics.component.html
@@ -1,1 +1,11 @@
-<p>analytics works!</p>
+<div class="main-container">
+    <app-header></app-header>
+    <div class="body row">
+        <div class="col col-md-8">
+
+        </div>
+        <div class="col col-md-4">
+
+        </div>
+    </div>
+</div>
