--- a/src/app/components/dashboard/content/analytics/general-analytics/general-analytics.component.html
+++ b/src/app/components/dashboard/content/analytics/general-analytics/general-analytics.component.html
@@ -1,1 +1,15 @@
-<p>general-analytics works!</p>
+<div class="main-container ">
+    <div class="analytics-header">
+        <app-analytics-header></app-analytics-header>
+    </div>
+    <div class="stretch-container">
+        <div class="info-side">
+
+        </div>
+        <div class="canvas-side">
+            <!--<canvas #chart baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins"></canvas>
+    -->
+
+        </div>
+    </div>
+</div>
