--- a/src/app/components/dashboard/content/analytics/general-analytics/general-analytics.component.html
+++ b/src/app/components/dashboard/content/analytics/general-analytics/general-analytics.component.html
@@ -1,15 +1,23 @@
 <div class="main-container ">
     <div class="analytics-header">
-        <app-analytics-header></app-analytics-header>
+        <app-analytics-header (periodSelectedEvent)="periodSelected($event)"></app-analytics-header>
     </div>
     <div class="stretch-container">
         <div class="info-side">
+            <h5>Nombres des visites</h5>
+            <span>{{numberOfVisits}} visite</span>
 
+            <h5>Gain Total</h5>
+            <span>{{totalGain}} DA</span>
+
+            <h5>Total des frais</h5>
+            <span>{{totalExpenses}} DA</span>
+
+            <h5>Gain Net Total</h5>
+            <span>{{totalPureGain}} DA</span>
         </div>
         <div class="canvas-side">
-            <!--<canvas #chart baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins"></canvas>
-    -->
-
+            <canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins"></canvas>
         </div>
     </div>
 </div>
