Evolution Analytics done

--- a/src/app/components/dashboard/content/analytics/analytics.component.html
+++ b/src/app/components/dashboard/content/analytics/analytics.component.html
@@ -11,5 +11,10 @@
                 <app-group-analytics *ngIf="analytics" [analytics]="analytics"></app-group-analytics>
             </div>
         </div>
+        <div class="col col-md-12">
+            <div class="evo-card">
+                <app-evolution-analytics *ngIf="analytics" [analytics]="analytics"></app-evolution-analytics>
+            </div>
+        </div>
     </div>
 </div>
