--- a/src/app/components/dashboard/content/analytics/group-analytics/group-analytics.component.html
+++ b/src/app/components/dashboard/content/analytics/group-analytics/group-analytics.component.html
@@ -2,6 +2,6 @@
     <div class="analytics-header">
         <app-group-analytics-header (selectOptionEvent)="selectOption($event)"></app-group-analytics-header>
     </div>
-    <canvas baseChart [legend]="false" width="500" height="460" [colors]="lineChartColors" [datasets]="radarChartData" [options]="radarChartOptions" [labels]="radarChartLabels" [chartType]="radarChartType">
+    <canvas baseChart [legend]="false" height="280px" [colors]="lineChartColors" [datasets]="radarChartData" [options]="radarChartOptions" [labels]="radarChartLabels" [chartType]="radarChartType">
   </canvas>
 </div>
