--- a/src/app/components/global/evolution-cart/evolution-cart.component.html
+++ b/src/app/components/global/evolution-cart/evolution-cart.component.html
@@ -1,4 +1,4 @@
-<div class="cart-container" [ngStyle]="classStyle">
+<div class="cart-container" [ngStyle]="classStyle" [class.white]="evolutionParam.white">
     <div class="top">
         <i class="{{evolutionParam.icon}}"></i>
         <div class="right">
