--- a/src/app/components/dashboard/content/analytics/comming-appointments/comming-appointments.component.html
+++ b/src/app/components/dashboard/content/analytics/comming-appointments/comming-appointments.component.html
@@ -1,1 +1,6 @@
-<p>comming-appointments works!</p>
+<div class="main-container">
+    <h5>Les Rendez-vous en ettente</h5>
+    <div class="visits">
+
+    </div>
+</div>
