--- a/src/app/components/dashboard/content/general/general-disease-report/general-disease-report.component.css
+++ b/src/app/components/dashboard/content/general/general-disease-report/general-disease-report.component.css
@@ -8,7 +8,13 @@
 h5 {
     font-weight: 600;
     font-size: 18px;
+    margin: 0px;
     margin-bottom: 16px;
 }
 
-canvas {}
+canvas {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
