--- a/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room.component.html
+++ b/src/app/components/dashboard/content/general/general-waiting-room/general-waiting-room.component.html
@@ -3,6 +3,6 @@
         Salle d'attent
     </h5>
     <div class="patients-list">
-        <app-general-waiting-room-patient *ngFor="let patient of patients" [patient]="patient"></app-general-waiting-room-patient>
+        <app-general-waiting-room-patient *ngFor="let visit of visits" [visit]="visit"></app-general-waiting-room-patient>
     </div>
 </div>
